--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^5.8.6",
     "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-elements": "^1.1.0",
+    "react-native-firebase": "^5.2.3",
     "react-native-indicators": "^0.13.0",
-    "react-native-vector-icons": "^6.3.0"
+    "react-native-vector-icons": "^6.3.0",
+    "react-navigation": "^3.3.2"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
