--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^2.0.0",
     "firebase": "^5.8.6",
     "intl": "^1.2.5",
     "prop-types": "^15.7.2",
