--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,7 +145,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation "com.google.firebase:firebase-auth:16.1.0"
-    implementation "com.google.firebase:firebase-firestore:18.2.0"
+    implementation "com.google.firebase:firebase-firestore:17.1.5"
+    implementation "com.google.firebase:firebase-storage:16.1.0"
 }
 
 // Run this once to be able to run the application with BUCK
