--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-fetch-blob')
     implementation project(':@react-native-community_netinfo')
     implementation project(':react-native-date-picker')
     implementation project(':react-native-firebase')
